<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">SMP Media Player</string>
    <string name="title_activity_main">SMP Media Player</string>
    <string name="package_name">com.servermanagerportal.mediaplayer</string>
    <string name="custom_url_scheme">com.servermanagerportal.mediaplayer</string>
    <string name="player_close">Close player</string>
    <string name="player_pause">Pause</string>
    <string name="player_play">Play</string>
    <string name="player_seek_back">−10s</string>
    <string name="player_seek_fwd">+10s</string>
    <string name="player_quality">Quality</string>
    <string name="player_audio">Audio</string>
    <string name="player_subs">Subtitles</string>
    <string name="player_version">Version</string>
    <string name="player_speed">Speed</string>
    <string name="player_sleep">Sleep</string>
    <string name="player_external">External</string>
    <string name="player_pip">PiP</string>
    <string name="player_skip_intro">Skip intro</string>
    <string name="player_skip_credits">Skip credits</string>
    <string name="player_play_next">Play next</string>
    <string name="player_subs_off">Off</string>
    <string name="player_sleep_off">Off</string>
    <string name="player_sleep_15">15 min</string>
    <string name="player_sleep_30">30 min</string>
    <string name="player_sleep_45">45 min</string>
    <string name="player_sleep_end">End of episode</string>
    <string name="player_no_options">No options for this title</string>
    <string name="player_updating_stream">Updating…</string>
</resources>
